      - [x] Fix inbound middleware
      - [ ] Fix inbound transports
      - [ ] Consider creating a unified Unary or Caller interface that can be
            used for both inbound and outbound unary.
      - [x] Consider removing Body from Request and Response entirely, making
            them positional, to avoid separating and embedding Meta* for the
            streaming case.
- [x] Change Request and Response body to yarpc.Buffer type
      - [ ] Accumulate request bodies at the inbound
- [ ] yarpcrouter.Router needs to accept middleware to decorate registered
      procedures.
- [ ] Replace functional options in yarpcpeerlist with struct options
- [ ] Create an API in yarpcfx to register and obtain peer lists by name.
      Use this API to configure the chooser for an outbound in their transport fx package.
      Use this API to send updates from a peer list updater to a peer list in the updater fx package.
- [ ] yarpchttp needs to subsume responsibility for validating requests instead
      of leaving that to middleware registered in the dispatcher.
- [ ] Consider renaming HandlerSpecs to Routes
- [ ] Fix round robin tests, relaxing its requirements regarding lifecycle
      ordering, perhaps taking availability changes into account.
- [ ] Audit yarpcerrors, remove the ones that are no longer needed.
- [ ] Construct PRs with retroactive continuity.
- [ ] Nit: scrape name pid and change to just id throughout.
- [ ] Audit docs

Encodings:
- [x] Drop raw encoding
- [x] Port JSON encoding
- [ ] Port Thrift encoding
- [ ] Port Protobuf encoding

Transports:
- [ ] Port TChannel transport
- [ ] Port or recreate gRPC transport

To port peer lists forward:
- [ ] Replace functional options with options struct pattern, like net in the
      go standard library and the v2/yarpchttp example.
- [ ] Remove lifecycle.
- [ ] Drop Config and Spec, recreate in yarpcfx.

To port transports forward:
- [ ] Rename Transport to Dialer, implementing yarpc.Dialer.